--- a/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/WashTest.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/WashTest.cshtml
@@ -70,7 +70,7 @@
     <div class="main-content">
         <header class="page-header">
             <h3>
-                <span>Accessory Wash Test & Wash</span>
+                <span>Accessory Oven Test & Wash</span>
             </h3>
             <div class="breadcrumb">
                 <div>Home</div>
