--- a/Quality/Quality/Areas/SampleRFT/Views/Inspection/Index.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/Inspection/Index.cshtml
@@ -2101,6 +2101,7 @@
     }
 
     function SPClick() {
+        ShowLoading();
         $.ajax({
             url: "@Url.Action("GetSP", "Inspection", new { Area = "SampleRFT" })",
             type: 'POST',
@@ -2110,6 +2111,7 @@
             success: function (data) {
                 $(".FilterUL[idx='SP']").html(data);
                 SelectItemClickBind();
+                NonLoading();
             },
             error: function (xhr, ajaxOptions, thrownError) {
                 console.log(xhr.responseText);
