ISP20220212 - Kepp按下不關窗

--- a/Quality/Quality/Views/PublicWondow/InspMeasurement_PictureList.cshtml
+++ b/Quality/Quality/Views/PublicWondow/InspMeasurement_PictureList.cshtml
@@ -124,7 +124,7 @@
             }
 
             window.opener.GetInspMeasurement_PictureList(Picture);
-            window.close();
+            //window.close();
         });
 
 
